--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "http": "^0.0.1-security",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
-    "mobx-react-lite": "^3.4.0",
+    "mobx-react-lite": "^4.0.5",
     "mongoose": "^8.2.0",
+    "nodemon": "^3.1.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
     "shortid": "^2.2.16",
     "socket.io": "^2.2.0",
@@ -26,6 +28,7 @@
   "scripts": {
     "goo": "pm2 start index.js & pm2 start server.js",
     "stop": "pm2 delete index & pm2 delete server",
+    "server": "nodemon server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
